--- a/Employee time tracking software/MainWindow.xaml
+++ b/Employee time tracking software/MainWindow.xaml
@@ -45,7 +45,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style> 
+        </Style>
         <ControlTemplate TargetType="Button" x:Key="btTemplate">
             <Border CornerRadius="25" BorderBrush="#FFB7B9BF" BorderThickness="0"
                     Background="#FFCACCD3" Height="40" Width="100" >
@@ -91,7 +91,7 @@
                 <Button Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Login" FontFamily="Times New Roman" FontSize="18" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF767E89" />
             </Border>
         </ControlTemplate>
-        <ControlTemplate TargetType="Button" x:Key="btTemplate2"> 
+        <ControlTemplate TargetType="Button" x:Key="btTemplate2">
             <Button  BorderBrush="#FF767E89"  BorderThickness="2" 
                      Width="202" Height="49" Background="White"  HorizontalAlignment="Center" VerticalAlignment="Center" Content="Start Time" FontFamily="Times New Roman" FontSize="18"    Foreground="#FF767E89"  >
                 <Button.Triggers>
@@ -132,7 +132,7 @@
                             </Storyboard>
                         </BeginStoryboard>
                     </EventTrigger>
-                </Button.Triggers> 
+                </Button.Triggers>
             </Button>
         </ControlTemplate>
         <ControlTemplate TargetType="Button" x:Key="btTemplate3">
@@ -192,7 +192,7 @@
                         <BeginStoryboard>
                             <Storyboard>
                                 <ParallelTimeline Duration="0:0:2">
- 
+
                                     <ColorAnimation Duration="0:0:1" 
                                 Storyboard.TargetProperty="(Label.Foreground).(SolidColorBrush.Color)"
                                 From="#FF95989A" To="Black" />
@@ -210,7 +210,7 @@
                         <BeginStoryboard>
                             <Storyboard>
                                 <ParallelTimeline Duration="0:0:2">
- 
+
                                     <ColorAnimation Duration="0:0:1" 
                                 Storyboard.TargetProperty="(Label.Foreground).(SolidColorBrush.Color)"
                                 From="Black" To="#FF95989A" />
@@ -221,9 +221,9 @@
                     </EventTrigger>
                 </Label.Triggers>
             </Label>
-        </ControlTemplate> 
+        </ControlTemplate>
     </Window.Resources>
-    <Grid Margin="0,0,321,0">
+    <Grid Margin="0,0,4,0">
         <Border x:Name="border_1" CornerRadius="20" BorderBrush="#FFABADB3" BorderThickness="1"
         VerticalAlignment="Center" UseLayoutRounding="True" Margin="155,86,-170,330" Height="37" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Uid="1" Visibility="Hidden">
             <TextBox x:Name="textBox_username" BorderThickness="0" Background="Transparent" Text="Username" FontFamily="Times New Roman" FontSize="22" Foreground="#FF9598A1" FontWeight="Bold" BorderBrush="#FF9598A1" Cursor="Hand" ToolTip="Please, enter you username" TextAlignment="Center" Margin="2,3" MouseEnter="textBox_username_MouseEnter" MouseLeave="textBox_username_MouseLeave"/>
@@ -235,14 +235,16 @@
         <TextBlock x:Name="textBlock"  HorizontalAlignment="Left" Margin="164,195,-56,0" TextWrapping="Wrap" Text="Forgot password?" VerticalAlignment="Top" Width="163" FontFamily="Times New Roman" FontSize="20" FontWeight="Bold" Foreground="#FF9598A1" MouseEnter="textBlock_MouseEnter" MouseLeave="textBlock_MouseLeave" Cursor="Hand" ToolTip="If you forgot your password, click this" Uid="1" Visibility="Hidden" MouseLeftButtonDown="textBlock_MouseLeftButtonDown"/>
         <TextBlock x:Name="textBlock2"  HorizontalAlignment="Left" Margin="164,220,-54,0" TextWrapping="Wrap" Text="Registration" VerticalAlignment="Top" Width="163" FontFamily="Times New Roman" FontSize="20" FontWeight="Bold" Foreground="#FF9598A1" MouseEnter="textBlock_MouseEnter" MouseLeave="textBlock_MouseLeave" Cursor="Hand" ToolTip="Click for registration to system" Uid="1" Visibility="Hidden" MouseLeftButtonDown="textBlock2_MouseLeftButtonDown"/>
         <Button x:Name="myButton" Template="{StaticResource btTemplate}" Height="40" Width="100" Margin="341,188,-170,225" Content="sad" Foreground="#FF767E89" Click="myButton_Click" Cursor="Hand" ToolTip="Click to enter" Uid="1" Visibility="Hidden"/>
-        <Label x:Name="label_info" Content="" HorizontalAlignment="Left" Margin="10,413,-301,0" VerticalAlignment="Top" Width="562" Height="30" FontFamily="Times New Roman" FontSize="14" FontWeight="Bold"/>
-        <Rectangle x:Name="rect" HorizontalAlignment="Left" Height="253" Margin="32,24,-289,0" Stroke="Black" VerticalAlignment="Top" Width="530" Fill="#FFC3C3C3" Uid="2"/>
-        <Button x:Name="button_start" Template="{StaticResource btTemplate2}" Content="Start time" HorizontalAlignment="Left" Margin="201,278,-130,46"   Click="button_start_Click" FontFamily="Times New Roman"   Cursor="Hand" ToolTip="Click to start timer" FontWeight="Bold" Uid="2"/>
+        <Label x:Name="label_info" Content="" HorizontalAlignment="Left" Margin="10,413,0,0" VerticalAlignment="Top" Width="478" Height="30" FontFamily="Times New Roman" FontSize="14" FontWeight="Bold"/>
+        <Rectangle x:Name="rect" HorizontalAlignment="Left" Height="253" Margin="32,24,-289,0" Stroke="Black" VerticalAlignment="Top" Width="530" Fill="#FFC3C3C3" Uid="2" Visibility="Hidden"/>
+        <Button x:Name="button_start" Template="{StaticResource btTemplate2}" Content="Start time" HorizontalAlignment="Left" Margin="201,278,-130,46"   Click="button_start_Click" FontFamily="Times New Roman"   Cursor="Hand" ToolTip="Click to start timer" FontWeight="Bold" Uid="2" Visibility="Hidden"/>
         <Button x:Name="button_stop" Template="{StaticResource btTemplate3}" Content="Start time" HorizontalAlignment="Left" Margin="201,278,-130,46"   Click="button_stop_Click" FontFamily="Times New Roman"   Cursor="Hand" ToolTip="Click to stop timer" FontWeight="Bold" Uid="2" Visibility="Hidden"/>
-        <Label x:Name="label_timer_now" Template="{ DynamicResource  lblTemplate}" Content="00:00:00"  Uid="2"/>
-        <Label x:Name="label_b1" Content="Total worked in this month:" HorizontalAlignment="Left" Margin="47,41,0,0" VerticalAlignment="Top" Height="32" Width="226" Foreground="#FF95989A" FontWeight="Bold" FontFamily="Times New Roman" FontSize="18" Uid="2"/>
-        <Label x:Name="label_b2" Content="Total worked today:" HorizontalAlignment="Left" Margin="342,41,-241,0" VerticalAlignment="Top" Height="32" Width="172" Foreground="#FF95989A" FontWeight="Bold" FontFamily="Times New Roman" FontSize="18" Uid="2"/>
-        <TextBlock x:Name="textBlock_b1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="12:45:45" VerticalAlignment="Top" Height="28" Width="226" Background="White" FontFamily="Times New Roman" FontWeight="Bold" TextAlignment="Center" FontSize="24" Foreground="#FF95989A" Margin="47,87,0,0"  MouseEnter="textBlock_b2_MouseEnter" Uid="2" MouseLeave="textBlock_b2_MouseLeave" />
-        <TextBlock x:Name="textBlock_b2" HorizontalAlignment="Left" Margin="314,87,-267,0" TextWrapping="Wrap" Text="1:56:40" VerticalAlignment="Top" Height="28" Width="226" Background="White" FontFamily="Times New Roman" FontWeight="Bold" TextAlignment="Center" FontSize="24" Foreground="#FF95989A" Uid="2" MouseEnter="textBlock_b2_MouseEnter" MouseLeave="textBlock_b2_MouseLeave"/>
+        <Label x:Name="label_timer_now" Template="{ DynamicResource  lblTemplate}" Content="00:00:00"  Uid="2" Visibility="Hidden"/>
+        <Label x:Name="label_b1" Content="Total worked in this month:" HorizontalAlignment="Left" Margin="47,41,0,0" VerticalAlignment="Top" Height="32" Width="226" Foreground="#FF95989A" FontWeight="Bold" FontFamily="Times New Roman" FontSize="18" Uid="2" Visibility="Hidden"/>
+        <Label x:Name="label_b2" Content="Total worked today:" HorizontalAlignment="Left" Margin="342,41,-241,0" VerticalAlignment="Top" Height="32" Width="172" Foreground="#FF95989A" FontWeight="Bold" FontFamily="Times New Roman" FontSize="18" Uid="2" Visibility="Hidden"/>
+        <TextBlock x:Name="textBlock_b1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="12:45:45" VerticalAlignment="Top" Height="28" Width="226" Background="White" FontFamily="Times New Roman" FontWeight="Bold" TextAlignment="Center" FontSize="24" Foreground="#FF95989A" Margin="47,87,0,0"  MouseEnter="textBlock_b2_MouseEnter" Uid="2" MouseLeave="textBlock_b2_MouseLeave" Visibility="Hidden" />
+        <TextBlock x:Name="textBlock_b2" HorizontalAlignment="Left" Margin="314,87,-267,0" TextWrapping="Wrap" Text="1:56:40" VerticalAlignment="Top" Height="28" Width="226" Background="White" FontFamily="Times New Roman" FontWeight="Bold" TextAlignment="Center" FontSize="24" Foreground="#FF95989A" Uid="2" MouseEnter="textBlock_b2_MouseEnter" MouseLeave="textBlock_b2_MouseLeave" Visibility="Hidden"/>
+        <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="393" Margin="10,6,0,0" VerticalAlignment="Top" Width="570" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderBrush="{x:Null}"/>
+        <Label x:Name="label" Content="Screenshots" HorizontalAlignment="Left" Margin="500,413,0,0" VerticalAlignment="Top" Height="30" Width="72" FontWeight="Bold" FontFamily="Times New Roman" FontSize="12" MouseLeftButtonDown="label_MouseLeftButtonDown" MouseEnter="label_MouseEnter" MouseLeave="label_MouseLeave" Background="#FFDE2B2B" RenderTransformOrigin="3.761,4.233"/>
     </Grid>
 </Window>
