--- a/Employee time tracking software/MainWindow.xaml
+++ b/Employee time tracking software/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Employee_time_tracking_software" 
         xmlns:WpfTest="clr-namespace:Employee_time_tracking_software"
         mc:Ignorable="d"
-        Title="Employee time tracking software" Height="480" Width="600" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="Employee time tracking software" Height="480" Width="600" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="Resources/icon2.ico" Closing="Window_Closing">
     <Window.Resources>
         <Style x:Key="{x:Type PasswordBox}" TargetType="{x:Type PasswordBox}">
             <Setter Property="WpfTest:PasswordBoxMonitor.IsMonitoring"
@@ -230,8 +230,7 @@
             </Border>
         </ControlTemplate>
         <ControlTemplate TargetType="Button" x:Key="btTemplate5">
-            <Border CornerRadius="25" BorderBrush="#FFB7B9BF" BorderThickness="0"
-                    Background="#FFCACCD3" Height="40" Width="100" >
+            <Border CornerRadius="25" BorderBrush="#FFB7B9BF" BorderThickness="0" Background="#FFCACCD3" Height="40" Width="300" >
                 <Border.Triggers>
                     <EventTrigger RoutedEvent="Button.MouseEnter">
                         <BeginStoryboard>
@@ -271,7 +270,7 @@
                         </BeginStoryboard>
                     </EventTrigger>
                 </Border.Triggers>
-                <Button Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="18" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF767E89" />
+                <Button Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="18" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF767E89"  Content="{TemplateBinding Content}"/>
             </Border>
         </ControlTemplate>
         <ControlTemplate TargetType="Label" x:Key="lblTemplate">
@@ -335,6 +334,6 @@
         <TextBlock x:Name="textBlock_b1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="12:45:45" VerticalAlignment="Top" Height="28" Width="226" Background="White" FontFamily="Times New Roman" FontWeight="Bold" TextAlignment="Center" FontSize="24" Foreground="#FF95989A" Margin="47,87,0,0"  MouseEnter="textBlock_b2_MouseEnter" Uid="2" MouseLeave="textBlock_b2_MouseLeave" Visibility="Hidden" />
         <TextBlock x:Name="textBlock_b2" HorizontalAlignment="Left" Margin="314,87,-267,0" TextWrapping="Wrap" Text="1:56:40" VerticalAlignment="Top" Height="28" Width="226" Background="White" FontFamily="Times New Roman" FontWeight="Bold" TextAlignment="Center" FontSize="24" Foreground="#FF95989A" Uid="2" MouseEnter="textBlock_b2_MouseEnter" MouseLeave="textBlock_b2_MouseLeave" Visibility="Hidden"/>
         <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="393" Margin="10,6,0,0" VerticalAlignment="Top" Width="570" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderBrush="{x:Null}" IsDocumentEnabled="True"/>
-        <Button x:Name="label" Template="{StaticResource btTemplate4}" Foreground="#FF767E89" Cursor="Hand" ToolTip="Click to view screenshots" Uid="1" Click="label_Click" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" Visibility="Hidden"/>
+        <Button x:Name="label" Template="{DynamicResource btTemplate4}" Foreground="#FF767E89" Cursor="Hand" ToolTip="Click to view screenshots" Uid="1" Click="label_Click" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" Visibility="Hidden"/>
     </Grid>
 </Window>
